[project]
name = "yak2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.16.0",
    "pystray==0.19.4",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pynput>=1.7.6",
    "screeninfo>=0.8.1",
]
